# ossiq

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  DOCKER_README.md  Dockerfile  HISTORY.md  LICENSE  README.md  RELEASE.md  cache_v2.json  docker-entrypoint.sh  frontend_build.py  hatch_build.py  justfile  mkdocs.yml  pylintrc  pyproject.toml  release.py  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docker.yml  docs  docs.yml  quality-gate.yml  release.yml  test.yml
docs/: conf.py  explanation.md  getting-started.md  how-to-guides.md  index.md  installation.md  reference.md  tutorials.md  usage.md
docs/_static/: llms.txt  ossiq.css  robots.txt  search_compat.js
docs/_static/samples/: scan_npm.html  scan_npm_2026-06-20.html  scan_pypi.html  scan_pypi_2026-06-20.html
docs/_templates/: landing.html  layout.html
docs/_templates/journal/: index.html  the-hidden-cost-of-ai-generated-code.html  the-poisoned-well-ai-supply-chain-attacks.html
docs/overrides/: landing.html
docs/overrides/partials/: logo.html
docs/samples/: scan_npm.html
docs/tutorials/: index.md  tutorial-first-analysis.md  tutorial-github-actions.md
frontend/: EXPLORER.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: inject-dataset.js
frontend/src/: App.vue  main.ts
frontend/src/__tests__/: App.spec.ts
frontend/src/components/: DependencyDetailPanel.vue  NavigationBreadcrumb.vue  ReportFilters.vue  ReportLegend.vue  ReportTable.vue
frontend/src/composables/: useCsvExport.ts  useD3Tree.ts  useHighlightState.ts  useNavigationStack.ts  usePackageRegistry.ts  useReportFilters.ts  useReportLoader.ts  useTreeFilters.ts  useTreeZoom.ts
frontend/src/explorer/: config.ts  nodeStyle.ts  registry.ts  renderAggregateLinks.ts  renderNodes.ts  renderSameVersionLinks.ts  renderTreeLinks.ts  transform.ts  visibleState.ts
frontend/src/router/: index.ts
frontend/src/stores/: ossiq.ts
frontend/src/types/: dependency-tree.ts  registry.ts  report.ts
frontend/src/views/: ScanReportView.vue  TransitiveDependenciesView.vue
qa/: 01-general.md  02-console-scan.md  03-html-report.md  04-solver.md  05-export.md  06-transitive-impacts.md  07-update-command.md  Dockerfile  README.md  release-checklist.md  smoke_matrix.py
qa/manual/: 01-general.md  02-console-status.md  03-html-report.md  05-export.md  06-transitive-impacts.md  07-plan-apply-command.md  release-checklist.md
src/ossiq/: __init__.py  cli.py  messages.py  settings.py  timeutil.py  utils.py
src/ossiq/adapters/: api.py  api_clearlydefined.py  api_github.py  api_interfaces.py  api_npm.py  api_osv.py  api_pypi.py  detectors.py
src/ossiq/clients/: __init__.py  batch.py  clearlydefined.py  client_clearlydefined.py  client_github.py  client_http.py  client_npm.py  client_osv.py  client_pypi.py  common.py  github.py  osv.py
src/ossiq/code/: diffs.py
src/ossiq/commands/: add.py  export.py  html.py  info.py  overview.py  package.py  plan.py  scan.py  scan_tree.py  status.py  tree.py  update.py
src/ossiq/domain/: README.md  common.py  cve.py  detectors.py  ecosystem.py  exceptions.py  package.py  project.py  repository.py  version.py
src/ossiq/presentation/: common.py  interfaces.py  registry.py  system.py  views.py
src/ossiq/service/: dependency.py  library_scan.py  package.py  project.py  update.py  update_impact.py
src/ossiq/solver/: README.md  __init__.py  dependencies_solver.py  driver_glucose.py  driver_pysat.py  encoder.py  kernel.py  problem.py  reason.py  universe.py  version_matchers.py
src/ossiq/sources/: project_sources.py
src/ossiq/ui/: registry.py  system.py
src/ossiq/unit_of_work/: core.py  uow_project.py
src/update_burden/: ast_parser.py  cli.py  config.py  messages.py  settings.py  timeutil.py  utils.py
src/update_burden/adapters/: api.py  api_github.py  api_interfaces.py  api_npm.py  core.py  project.py
src/update_burden/code/: __init__.py  api_index.py  ast_parser.py
src/update_burden/commands/: overview.py
src/update_burden/domain/: common.py  detectors.py  exceptions.py  package.py  project.py  version.py
src/update_burden/presentation/: common.py  system.py  views.py
src/update_burden/registry/: __gh_api.py  changes.py  gh_api.py  npm_api.py  package.py  project.py  repository.py  versions.py
src/update_burden/service/: package.py  project.py  unit_of_work.py
src/update_burden/unit_of_work/: core.py  uow_package.py  uow_project.py
testdata/mixed/: package.json
testdata/npm/deprecated/: package-lock.json  package.json
testdata/npm/project1/: package-lock.json  package.json  packages.json
testdata/npm/project3/: package-lock.json  package.json
testdata/npm/version-constrained/: package-lock.json  package.json
testdata/pypi/pip-classic/: requirements.txt
testdata/pypi/pip-classic-library/: requirements.txt
testdata/pypi/pylock/: pylock.toml  pyproject.toml
testdata/pypi/uv/: pyproject.toml
testdata/pypi/version-constraint/: pyproject.toml
testdata/pypi/yanked/: pylock.toml  requirements.txt
tests/: __init__.py  test_import_boundaries.py  test_ossiq.py  test_release.py  test_update_burden.py
tests/adapters/: test_api_clearlydefined.py  test_api_github.py  test_api_npm.py  test_api_osv.py  test_api_pypi.py  test_detectors.py
tests/adapters/package_managers/: test_api_npm.py  test_api_pip.py  test_api_uv.py  (+3 more)
tests/clients/: conftest.py  test_batch.py  test_batch_integration.py  test_clearlydefined.py  test_npm.py  test_osv.py  test_pypi.py
tests/commands/: __init__.py  test_update.py
tests/domain/: test_purl.py  test_version.py
tests/scripts/: test_frontend_build.py
tests/service/: test_build_pipeline.py  test_library_scan.py  test_project.py  test_update.py  test_update_impact.py
tests/solver/: test_driver_pysat.py  test_encoder.py  test_reason.py  test_solver.py  test_solver_performance.py  test_transitive_solver.py  test_universe.py  test_version_matchers.py
tests/sources/: test_project_sources.py
tests/unit_of_work/: test_uow_project.py
(+109 files in other folders)
