[project]
name = "ossiq-cli"
version = "0.1.0"
description = "Utility to forecast risks associated with currently installed packages updates"
readme = "README.md"
authors = [
  {name = "Maksym Klymyshyn", email = "klymyshyn@gmail.com"}
]
maintainers = [
  {name = "Maksym Klymyshyn", email = "klymyshyn@gmail.com"}
]
classifiers = [
    "OSI Approved :: GNU General Public License v3 (GPLv3)"
]
license = {file = "LICENSE"}
dependencies = [ # specify that newer patch or minor versions allowed
  "ipdb~=0.13.13",
  "typer~=0.20.0",
  "pydantic~=2.12.4",
  "rich~=14.2.0",
  "termcolor~=3.2.0",
  "requests~=2.32.5",
  "semver~=3.0.4",
  "jinja2~=3.1.6",
  "tree-sitter~=0.25.2",
  "tree-sitter-javascript~=0.25.0",
  "tree-sitter-typescript~=0.23.2",
  "pandas~=2.3.3",
  "hatch>=1.15.1",
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage~=7.12.0",  # testing
    "pytest~=9.0.1",  # testing
    "ruff~=0.14.6",  # linting
    "ty~=0.0.1a27", # checking types
    "ipdb~=0.13.13", # debugging,
    "black~=25.11.0",
    "pylint~=4.0.3"
]

[project.urls]
bugs = "https://github.com/mklymyshyn/ossiq-cli/issues"
changelog = "httpshttps://github.com/mklymyshyn/ossiq/blob/master/changelog.md"
homepage = "https://github.com/mklymyshyn/ossiq-cli"
repository = "https://github.com/mklymyshyn/ossiq-cli.git"

[project.scripts]
ossiq-cli = "ossiq.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
